feat: add NeoForge bundle and mapped permission compatibility
Changes:
- Build and packaging matrix
  - Added `magicutils.neoforge-bundle` plugin and new `neoforge-bundle` module packaging.
  - Wired NeoForge bundle into shared build logic and default matrix targets.
  - Extended target resolution to accept `magicutils.target` from Gradle properties and JVM system properties.

- Permission compatibility for Fabric and NeoForge
  - Reworked Fabric and NeoForge command platform permission checks to use bridge fallbacks consistently.
  - Upgraded Fabric permission bridge to support mapped runtime APIs across modern permission models.
  - Added NeoForge permission registration and explicit fallback handling for non-registered nodes.

- Reflection resilience and mapping support
  - Expanded `ReflectiveAccess` with resolver-based mapped class/method/field lookup APIs.
  - Hardened reflective operations against linkage/runtime failures and classloader edge cases.
  - Added Fabric mapping resolver integration and updated reflection allowlist entries.

- Test coverage for runtime behavior
  - Added `ReflectiveAccessTest` for resolver-backed mapped lookups and classloader fallback behavior.
  - Added Fabric command integration coverage for op-only permission behavior in modern sources.
  - Updated command/diagnostics tests for Java compatibility (`get(0)` over `getFirst()`).

- Misc
  - Updated HTTP client lifecycle method resolution to use runtime client class methods.